docs/versioned_docs/version-2.0.0/reference/objects.mdx
<!-- Generated by port_legacy_docs.py v2 from v2.0.0 (ab4d7f0208fff3167819ec2464ddd38f91ceb401). Historical snapshot—do not edit directly. -->

<a id="objects"></a>
# Objects

**Objects** are the lowest-level composable primitives in `slackblocks`. They don't render on their own — instead, they're passed into [Elements](/v2.0.0/reference/elements) and [Blocks](/v2.0.0/reference/blocks) to populate them with text, choices, confirmations, and so on.

The most important ones:

- [`Text`](#objects.Text) — a piece of `mrkdwn` or `plain_text` content. Most fields that accept a `str` will also accept a `Text` for fine-grained control.
- [`Option`](#objects.Option) — a single selectable choice in a select menu, checkbox, or radio group.
- [`ConfirmationDialogue`](#objects.ConfirmationDialogue) — a "Are you sure?" prompt shown before destructive actions.

Slack reference: [https://api.slack.com/reference/block-kit/composition-objects](https://api.slack.com/reference/block-kit/composition-objects)

### ColumnAlignment module-attribute {#objects.ColumnAlignment}

**Value**

```python
ColumnAlignment: TypeAlias = Literal['left', 'center', 'right']
```

<div className="api-docstring">

Allowable values for ``ColumnSettings.align``.

</div>

### ConversationType module-attribute {#objects.ConversationType}

**Value**

```python
ConversationType: TypeAlias = Literal['im', 'mpim', 'private', 'public']
```

<div className="api-docstring">

The four kinds of Slack conversation that ``ConversationFilter.include`` may
contain. See [https://api.slack.com/reference/block-kit/composition-objects#filter_conversations](https://api.slack.com/reference/block-kit/composition-objects#filter_conversations).

</div>

### ColumnSettings {#objects.ColumnSettings}

**Class**

```python
ColumnSettings(align: ColumnAlignment | None = None, is_wrapped: bool | None = None)
```

<div className="api-docstring">

An object that defines the settings for a column in a `Table` block.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `align` | `ColumnAlignment \| None` | the alignment of the column, one of `left`, `center`, or `right`. |
| `is_wrapped` | `bool \| None` | whether the text in the column should be wrapped. |

</div>

### Confirm {#objects.Confirm}

**Class**

```python
Confirm(*args, **kwargs)
```

<div className="api-docstring">

Alias for `ConfirmationDialogue` to retain backwards compatibility.

See:
    [`ConfirmationDialogue`](/v2.0.0/reference/objects/#objects.ConfirmationDialogue).

</div>

### ConfirmationDialogue {#objects.ConfirmationDialogue}

**Class**

```python
ConfirmationDialogue(title: TextLike, text: TextLike, confirm: TextLike, deny: TextLike)
```

<div className="api-docstring">

An object that defines a dialog that provides a confirmation step
to any interactive element. This dialog will ask the user to confirm
their action by offering confirm and deny buttons.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `title` | `TextLike` | the text heading presented at the top of the dialogue box (max 100 chars). |
| `text` | `TextLike` | the text explaining the decision being made by the user through<br />the dialogue box (max 300 chars). |
| `confirm` | `TextLike` | the text inside the confirmation button of the dialogue box (max 30 chars). |
| `deny` | `TextLike` | the text inside the deny button of the dialogue box (max 30 chars). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the arguments fail to pass validation checks. |

</div>

#### from_dict classmethod {#objects.ConfirmationDialogue.from_dict}

```python
from_dict(data: dict[str, Any]) -> ConfirmationDialogue
```

Parse a Slack ``confirm`` composition object back into an instance.

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `MissingRequiredError` | if any of ``title``, ``text``, ``confirm``,<br />``deny`` is absent. |

### ConversationFilter {#objects.ConversationFilter}

**Class**

```python
ConversationFilter(include: ConversationType | list[ConversationType] | None = None, exclude_external_shared_channels: bool | None = None, exclude_bot_users: bool | None = None)
```

<div className="api-docstring">

Provides a way to filter the list of options in a conversations select menu or
conversations multi-select menu.

See: [https://api.slack.com/reference/block-kit/composition-objects#filter_conversations](https://api.slack.com/reference/block-kit/composition-objects#filter_conversations).

At least one of the available arguments _must_ be provided.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `include` | `ConversationType \| list[ConversationType] \| None` | Which types of conversations to include in the list.<br />One of more of `im`, `mpim`, `private`, `public`. |
| `exclude_external_shared_channels` | `bool \| None` | whether to remove shared public channels<br />from the list. See [https://api.slack.com/enterprise/shared-channels](https://api.slack.com/enterprise/shared-channels). |
| `exclude_bot_users` | `bool \| None` | whether to remove bot users from the list of conversations. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageException` | in the event that the user provides none of `include`,<br />`exclude_external_shared_channels`, or `exclude_bot_users` arguments. |

</div>

#### from_dict classmethod {#objects.ConversationFilter.from_dict}

```python
from_dict(data: dict[str, Any]) -> ConversationFilter
```

Parse a Slack ``filter`` composition object.

At least one of ``include``, ``exclude_external_shared_channels``,
or ``exclude_bot_users`` must be present; otherwise the underlying
constructor raises ``MissingRequiredError``.

### DispatchActionConfiguration {#objects.DispatchActionConfiguration}

**Class**

```python
DispatchActionConfiguration(trigger_actions_on: str | list[str] | None = None)
```

<div className="api-docstring">

Determines when a plain-text input element will return a `block_action`s interaction payload.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `trigger_actions_on` | `str \| list[str] \| None` | a list of strings representing interaction types that should return<br />a `block_actions` payload. One or both of `on_enter_pressed`, `on_character_entered`. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if an invalid value is provided amongst the options for<br />`trigger_actions_on`. |

</div>

#### from_dict classmethod {#objects.DispatchActionConfiguration.from_dict}

```python
from_dict(data: dict[str, Any]) -> DispatchActionConfiguration
```

Parse a Slack ``dispatch_action_config`` composition object.

### InputParameter {#objects.InputParameter}

**Class**

```python
InputParameter(name: str, value: str)
```

<div className="api-docstring">

Contains information about an input parameter.

See [https://api.slack.com/automation/workflows#defining-input-parameters](https://api.slack.com/automation/workflows#defining-input-parameters).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `name` | `str` | the name of the input parameter. |
| `value` | `str` | the value associated with the input parameter. |

</div>

#### from_dict classmethod {#objects.InputParameter.from_dict}

```python
from_dict(data: dict[str, Any]) -> InputParameter
```

Parse a Slack ``input_parameter`` composition object.

### Markdown {#objects.Markdown}

**Class**

```python
Markdown(text: str, verbatim: bool = False)
```

<div className="api-docstring">

Convenience wrapper for `Text` with `type_=TextType.MARKDOWN`.

`Markdown("_italic_", verbatim=True)` is equivalent to
`Text("_italic_", type_=TextType.MARKDOWN, verbatim=True)`. Anywhere a
`Text` or `TextLike` is accepted, a `Markdown` works because `Markdown`
is a subclass of `Text`. The rendered JSON is identical to the
equivalent `Text` call.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str` | the markdown-formatted text to render (1-3000 characters). |
| `verbatim` | `bool` | if `True`, links, channel names, and user names are<br />rendered verbatim rather than as Slack-style references. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `LengthError` | if the provided `text` is empty or too long. |

</div>

### Option {#objects.Option}

**Class**

```python
Option(text: TextLike, value: str, description: TextLike | None = None, url: str | None = None)
```

<div className="api-docstring">

An object that represents a single selectable item in a select menu, multi-select
menu, checkbox group, radio button group, or overflow menu.

See [https://api.slack.com/reference/block-kit/composition-objects#option](https://api.slack.com/reference/block-kit/composition-objects#option).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `TextLike` | the text identifying the option (that the user will see). |
| `value` | `str` | the underlying value of that option (not seen by the user). |
| `description` | `TextLike \| None` | a more detailed explanation of what the option means (user-facing). |
| `url` | `str \| None` | a URL to load in the user's browser when the option is clicked.<br />Only available in `OverflowMenus`. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when any of the provided arguments fail validation. |

</div>

#### from_dict classmethod {#objects.Option.from_dict}

```python
from_dict(data: dict[str, Any]) -> Option
```

Parse a Slack ``option`` composition object back into an ``Option``.

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `MissingRequiredError` | if ``text`` or ``value`` is absent. |

### OptionGroup {#objects.OptionGroup}

**Class**

```python
OptionGroup(label: TextLike, options: list[Option])
```

<div className="api-docstring">

Provides a way to group options in a select menu or multi-select menu.

See [https://api.slack.com/reference/block-kit/composition-objects#option_group](https://api.slack.com/reference/block-kit/composition-objects#option_group).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `label` | `TextLike` | a label shown above the group of options. |
| `options` | `list[Option]` | a list of `Option` objects that will form the contents of the group (max 100). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if no options are provided or the label is not valid. |

</div>

#### from_dict classmethod {#objects.OptionGroup.from_dict}

```python
from_dict(data: dict[str, Any]) -> OptionGroup
```

Parse a Slack ``option_group`` composition object.

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `MissingRequiredError` | if ``label`` or ``options`` is absent. |

### PlainText {#objects.PlainText}

**Class**

```python
PlainText(text: str, emoji: bool = False)
```

<div className="api-docstring">

Convenience wrapper for `Text` with `type_=TextType.PLAINTEXT`.

`PlainText("Hi", emoji=True)` is equivalent to
`Text("Hi", type_=TextType.PLAINTEXT, emoji=True)`. Anywhere a `Text` or
`TextLike` is accepted, a `PlainText` works because `PlainText` is a
subclass of `Text`. The rendered JSON is identical to the equivalent
`Text` call.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str` | the text to render (1-3000 characters). |
| `emoji` | `bool` | if `True`, emoji (e.g. `:smile:`) are escaped into Unicode. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `LengthError` | if the provided `text` is empty or too long. |

</div>

### RawText {#objects.RawText}

**Class**

```python
RawText(text: str, emoji: bool = False)
```

<div className="api-docstring">

An object containing some text, formatted as `raw_text` for use in
`Table` blocks.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str` | the text to be rendered in a message. |
| `emoji` | `bool` | only usable with `TextType.PLAINTEXT`, if True: emoji will be<br />escaped into text format (e.g. `:smile:`). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageException` | if the provided `text` fails validation. |

</div>

### SlackFile {#objects.SlackFile}

**Class**

```python
SlackFile(url: str | None, id: str | None)
```

<div className="api-docstring">

Defines an object containing Slack file information to be used in an image
    block or image element.

This file must be an image and you must provide either the URL or ID (not both).

See: [https://api.slack.com/reference/block-kit/composition-objects#slack_file](https://api.slack.com/reference/block-kit/composition-objects#slack_file).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `url` | `str \| None` | the URL can be the `url_private` or the `permalink` of the Slack file<br />(only one of `url` or `id` can be provided). |
| `id` | `str \| None` | the Slack ID of the file<br />(only one of `url` or `id` can be provided). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if both `url` and `id` are provided |

</div>

#### from_dict classmethod {#objects.SlackFile.from_dict}

```python
from_dict(data: dict[str, Any]) -> SlackFile
```

Parse a Slack ``slack_file`` composition object.

### Text {#objects.Text}

**Class**

```python
Text(text: str, type_: TextType = TextType.MARKDOWN, emoji: bool = False, verbatim: bool = False)
```

<div className="api-docstring">

An object containing some text, formatted either as `plain_text` or using
Slack's `mrkdwn`.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str` | the text to be rendered in a message (max 3000 characters). |
| `type_` | `TextType` | either `TextType.MARKDOWN` or `TextType.PLAINTEXT`. |
| `emoji` | `bool` | only usable with `TextType.PLAINTEXT`, if True: emoji will be<br />escaped into text format (e.g. `:smile:`). |
| `verbatim` | `bool` | only usable with `TextType.MARKDOWN`, if True: links, channel<br />names, user names will not automatically be rendered as links. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageException` | if the provided `text` fails validation. |

</div>

#### from_dict classmethod {#objects.Text.from_dict}

```python
from_dict(data: dict[str, Any]) -> Text
```

Parse a Slack-shaped ``text`` composition object back into a ``Text``.

Unknown fields are ignored so that future Slack additions do not
break round-tripping.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `data` | `dict[str, Any]` | a dict matching the Slack ``text`` composition-object shape,<br />e.g. ``{"type": "mrkdwn", "text": "hi", "verbatim": True}``. |

#### Returns

| Type | Description |
| --- | --- |
| `Text` | A ``Text`` instance. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `MissingRequiredError` | if ``data["text"]`` is absent. |
| `TypeMismatchError` | if ``data["type"]`` is not one of the<br />allowable ``TextType`` values. |

#### to_text staticmethod {#objects.Text.to_text}

```python
to_text(text: str | Text | None, force_plaintext: bool = False, max_length: int | None = None, allow_none: bool = False) -> Text | None
```

Coerces `str` or `Text` objects into `Text` objects.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str \| Text \| None` | the `str` or `Text` object to ensure is in `Text` format. |
| `force_plaintext` | `bool` | if `True`, forces the `str` or `Text` object<br />into a `Text` object with the type `TextType.PLAINTEXT`. |
| `max_length` | `int \| None` | `text` will be checked against this length in addition<br />to the standard `Text` limit of 3000 characters. |
| `allow_none` | `bool` | whether to accept `None` as a valid value for `text`.<br />The return type narrows based on this value:<br /><br />- ``allow_none=False`` (the default) -> always returns ``Text``.<br />- ``allow_none=True`` -> returns ``Text \| None``. |

#### to_text_nonnull staticmethod {#objects.Text.to_text_nonnull}

```python
to_text_nonnull(text: str | Text, force_plaintext: bool = False, max_length: int | None = None) -> Text
```

Coerces `str` or `Text` objects into `Text` objects, but does not allow `None` values.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str \| Text` | the `str` or `Text` object to ensure is in `Text` format. |
| `force_plaintext` | `bool` | if `True`, forces the `str` or `Text` object<br />into a `Text` object with the type `TextType.PLAINTEXT`. |
| `max_length` | `int \| None` | `text` will be checked against this length in addition<br />to the standard `Text` limit of 3000 characters. |

#### Returns

| Type | Description |
| --- | --- |
| `Text` | A `Text` object created from the input. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if the text length exceeds the specified max_length. |

### TextType {#objects.TextType}

**Class**

```python

```

<div className="api-docstring">

Allowable types for Slack Text objects.

MARKDOWN: traditional markdown formatting, see
    [https://api.slack.com/reference/surfaces/formatting#basic-formatting](https://api.slack.com/reference/surfaces/formatting#basic-formatting)
PLAINTEXT: simple Unicode text with no formatting (e.g. bold) features.

N.B: some usages of Text objects only allow the `PLAINTEXT` variety.

</div>

### Trigger {#objects.Trigger}

**Class**

```python
Trigger(url: str, customizable_input_parameters: InputParameter | list[InputParameter] | None)
```

<div className="api-docstring">

Contains information about a trigger.

See: [https://api.slack.com/automation/triggers](https://api.slack.com/automation/triggers).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `url` | `str` | a link trigger URL, see<br />[https://api.slack.com/automation/triggers/link](https://api.slack.com/automation/triggers/link) |
| `customizable_input_parameters` | `InputParameter \| list[InputParameter] \| None` | a list of `InputParameter` objects<br />which map to those parameters defined on the Workflow in<br />which they are provided. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when any of the items in<br />`customizable_input_parameters` is not a valid `InputParameter`. |

</div>

#### from_dict classmethod {#objects.Trigger.from_dict}

```python
from_dict(data: dict[str, Any]) -> Trigger
```

Parse a Slack ``trigger`` composition object.

### Workflow {#objects.Workflow}

**Class**

```python
Workflow(trigger: Trigger)
```

<div className="api-docstring">

Contains information about a workflow.

See [https://api.slack.com/automation/workflows](https://api.slack.com/automation/workflows).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `trigger` | `Trigger` | a `Trigger` object that will initiate the workflow. |

</div>

#### from_dict classmethod {#objects.Workflow.from_dict}

```python
from_dict(data: dict[str, Any]) -> Workflow
```

Parse a Slack ``workflow`` composition object.

#### from_url classmethod {#objects.Workflow.from_url}

```python
from_url(url: str, **input_parameters: str) -> Workflow
```

Build a `Workflow` from a trigger URL and input parameters in one call.

``Workflow.from_url(url, a='1', b='2')`` is equivalent to::

    Workflow(
        trigger=Trigger(
            url=url,
            customizable_input_parameters=[
                InputParameter(name='a', value='1'),
                InputParameter(name='b', value='2'),
            ],
        ),
    )

When no input parameters are supplied, the resulting trigger has
``customizable_input_parameters=None`` (the key is omitted from JSON).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `url` | `str` | the link trigger URL. |
| `**input_parameters` | `str` | zero or more ``name=value`` pairs that become<br />``InputParameter`` entries on the trigger. |

#### Returns

| Type | Description |
| --- | --- |
| `Workflow` | A new ``Workflow`` instance. |
